change twitter logo

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div data-aos="zoom-out-right">
                     <li title="Twitter">
                         <a href="https://twitter.com/afseer_ashraf" target="_blank">
-                            <i class="fab fa-twitter iconi"></i>
+                            <img src="./image/X.png" alt="X" height="25px" widht="25px">
                         </a>
                     </li>
                 </div>
