--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
                 
 
-                <span class="current-title" style="font-size: large">
+                <!-- <span class="current-title" style="font-size: large">
                     Fullstack developer<span id="typing-effect">|</span>
-                </span>
+                </span> -->
                 <br><br>
 
                 <ul id="socil-icons">
