--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                         </a>
                     </li>
                 </div>
+                <div data-aos="zoom-out-left">
+
+                    <li title="LeetCode">
+                        <a href="https://leetcode.com/u/afseer/" target="_blank">
+                            <img src="image/leetcode1.png" alt="leetcode" width="29px">
+                        </a>
+                    </li>
+                </div>
 
 
                 <div data-aos="zoom-out-left">
