change the name spelling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <span class="hi">Hi, </span>
                     <span class="this-is" style="font-size: 25px">This is</span>
-                    <h1 class="name" style="font-size: 32px; display: inline;">AFSEER</h1>
+                    <h1 class="name" style="font-size: 32px; display: inline;">AFZEER</h1>
 
                 </span>
             </header>
@@ -143,7 +143,7 @@
             <div class="footer__content">
                 © <span id="date_">  </span> |
                 <a href="#" style="font-weight: bold;" target="_blank">
-                    abu_afz
+                    Afzeer
                 </a>
             </div>
         </div>
